force-app/main/default/objects/Opportunity/fields/AccM_Calendly_Link__c.field-meta.xml
<CustomField>
    <fullName>AccM_Calendly_Link__c</fullName>
    <description>CDS-2575</description>
    <formula>IF(!ISBLANK( Calendly_User__c),

HYPERLINK(&quot;https://calendly.com/&quot; &amp; Calendly_User__c &amp; &quot;_orderbird_pay/anmeldung_orderbird_pay?sfid=&quot; &amp; Id &amp; &quot;&amp;name=&quot; &amp; Account.Primary_Contact__r.FirstName &amp; &quot;+&quot; &amp;  Account.Primary_Contact__r.LastName &amp; &quot;&amp;email=&quot; &amp; Account.Primary_Contact__r.Email &amp; &quot;&amp;a1=&quot; &amp; Account.Primary_Contact__r.Phone &amp; &quot;&amp;a2=&quot; &amp; Account.Name &amp; &quot;&amp;a3=&quot; &amp; Account.CustomerID__c &amp; &quot;&amp;a4=&quot; &amp; Account.VAT_number_USt_ID__c  , &quot;Book Event for &quot; &amp; Calendly_User__c)

, &quot;N/A&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AccM Calendly Link</label>
    <type>Text</type>
</CustomField>