force-app/main/default/objects/Opportunity/fields/Account_Billing_Country__c.field-meta.xml
<CustomField>
    <fullName>Account_Billing_Country__c</fullName>
    <description>Stakeholder: NEST // Helping field to realize certain list views on the opportunity.</description>
    <formula>Account.BillingCountry</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>What is the related billing address for this opp? Help field, automatically filled</inlineHelpText>
    <label>Account Billing Country</label>
    <type>Text</type>
</CustomField>