force-app/main/default/objects/Opportunity/fields/Age_Opp__c.field-meta.xml
<CustomField>
    <fullName>Age_Opp__c</fullName>
    <formula>TODAY()-DATEVALUE(CreatedDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Age (Opp)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>