force-app/main/default/objects/Opportunity/fields/Alternative_Opp_Owner__c.field-meta.xml
<CustomField>
    <fullName>Alternative_Opp_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Stakeholder: AccM https://jira.orderbird.com/browse/CDS-2690</description>
    <label>Alternative Opp Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>