force-app/main/default/objects/Opportunity/fields/Ambassador_Closed_Won_Mail__c.field-meta.xml
<CustomField>
    <fullName>Ambassador_Closed_Won_Mail__c</fullName>
    <description>https://jira.orderbird.com/browse/CDS-2029
Stakeholder Partner Management</description>
    <label>Ambassador Closed Won Mail</label>
    <type>Date</type>
</CustomField>