force-app/main/default/objects/Opportunity/fields/Ambassador_Commission__c.field-meta.xml
<CustomField>
    <fullName>Ambassador_Commission__c</fullName>
    <description>Stakeholder Finance &amp; PaM https://jira.orderbird.com/browse/CDS-2027</description>
    <inlineHelpText>What is the state of the commission to the Ambassador who referred us this opportunity?</inlineHelpText>
    <label>Ambassador Commission</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Invoice Received</fullName>
            </value>
            <value>
                <fullName>Invoice Paid</fullName>
            </value>
            <value>
                <fullName>Not Commissionable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>