force-app/main/default/objects/Opportunity/fields/Ambassador_Commission_Amount__c.field-meta.xml
<CustomField>
    <fullName>Ambassador_Commission_Amount__c</fullName>
    <description>Stakeholder Partnermanagement
 https://jira.orderbird.com/browse/CDS-2845</description>
    <inlineHelpText>How high was the commission for this opportunity to the related Ambassador? Get&apos;s filled automatically once CCPD is filled in</inlineHelpText>
    <label>Ambassador Commission Amount</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>