force-app/main/default/objects/Opportunity/fields/Ambassador_Commission_Date__c.field-meta.xml
<CustomField>
    <fullName>Ambassador_Commission_Date__c</fullName>
    <description>Stakeholder Partnermanagement
https://jira.orderbird.com/browse/CDS-2845</description>
    <inlineHelpText>When has the Ambassador Commission been set? Get&apos;s filled automatically</inlineHelpText>
    <label>Ambassador Commission Date</label>
    <type>Date</type>
</CustomField>