force-app/main/default/objects/Opportunity/fields/BlubCompetitors__c.field-meta.xml
<CustomField>
    <fullName>BlubCompetitors__c</fullName>
    <description>Stakeholder: Sales</description>
    <inlineHelpText>What do we know about competitors in regards to this opp? Part of BLUBZEWE. Filled by Sales Agent</inlineHelpText>
    <label>Competitors</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>none</fullName>
            </value>
            <value>
                <fullName>unkown</fullName>
            </value>
            <value>
                <fullName>confirmed</fullName>
            </value>
            <value>
                <fullName>won&apos;t tell</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>