force-app/main/default/objects/Opportunity/fields/BlubCriteriaForDecision__c.field-meta.xml
<CustomField>
    <fullName>BlubCriteriaForDecision__c</fullName>
    <description>Stakeholder: Sales</description>
    <inlineHelpText>Do we know what are the most important aspects the prospect is looking for? Part of BLUBZEWE. Filled by Sales Agent</inlineHelpText>
    <label>Criteria for Decision</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>well known</fullName>
            </value>
            <value>
                <fullName>known</fullName>
            </value>
            <value>
                <fullName>partly known</fullName>
            </value>
            <value>
                <fullName>unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>