force-app/main/default/objects/Opportunity/fields/BlubExitementUSP__c.field-meta.xml
<CustomField>
    <fullName>BlubExitementUSP__c</fullName>
    <description>Stakeholder: Sales</description>
    <inlineHelpText>How well has the prospect caught on to our USP and got accordingly exited? Part of BLUBZEWE. Filled by Sales Agent</inlineHelpText>
    <label>Exitement/ USP</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>very high</fullName>
            </value>
            <value>
                <fullName>high</fullName>
            </value>
            <value>
                <fullName>normal</fullName>
            </value>
            <value>
                <fullName>low</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>