force-app/main/default/objects/Opportunity/fields/BlubUrgency__c.field-meta.xml
<CustomField>
    <fullName>BlubUrgency__c</fullName>
    <description>Stakeholder: Sales</description>
    <inlineHelpText>How urgent is this opp? Part of BLUBZEWE. Filled by Sales Agent</inlineHelpText>
    <label>Urgency</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>very high</fullName>
            </value>
            <value>
                <fullName>high</fullName>
            </value>
            <value>
                <fullName>normal</fullName>
            </value>
            <value>
                <fullName>low</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>