force-app/main/default/objects/Opportunity/fields/BLUBZEWE__c.field-meta.xml
<CustomField>
    <fullName>BLUBZEWE__c</fullName>
    <formula>&quot;Required to close Demo&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BLUBZEWE</label>
    <type>Text</type>
</CustomField>