force-app/main/default/objects/Opportunity/fields/Budget__c.field-meta.xml
<CustomField>
    <fullName>Budget__c</fullName>
    <description>Stakeholder: Sales</description>
    <inlineHelpText>How well does the budget the prospect plans with fit our products? Part of BLUBZEWE. Filled by Sales Agent</inlineHelpText>
    <label>Budget</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>perfect fit</fullName>
            </value>
            <value>
                <fullName>good fit</fullName>
            </value>
            <value>
                <fullName>fits less</fullName>
            </value>
            <value>
                <fullName>doesn&apos;t fit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>