force-app/main/default/objects/Opportunity/fields/Calendly_User__c.field-meta.xml
<CustomField>
    <fullName>Calendly_User__c</fullName>
    <description>https://jira.orderbird.com/browse/CDS-2575</description>
    <label>Calendly User</label>
    <length>255</length>
    <type>Text</type>
</CustomField>