force-app/main/default/objects/Opportunity/fields/CancellationQuoteCount__c.field-meta.xml
<CustomField>
    <fullName>CancellationQuoteCount__c</fullName>
    <label>Cancellation Quote Count</label>
    <summaryFilterItems>
        <field>Quote.IsCancellation__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Quote.OpportunityId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>