force-app/main/default/objects/Opportunity/fields/Cash_Drawer_Quantity_opt__c.field-meta.xml
<CustomField>
    <fullName>Cash_Drawer_Quantity_opt__c</fullName>
    <description>Used for MINI Quote generation https://jira.orderbird.com/browse/CDS-2603

To be deleted asap</description>
    <label>Cash Drawer Quantity (opt.)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>