force-app/main/default/objects/Opportunity/fields/CCD__c.field-meta.xml
<CustomField>
    <fullName>CCD__c</fullName>
    <description>Created for https://jira.orderbird.com/browse/CDS-432
Can probably deleted after CDS Release 2.0</description>
    <formula>Account.Closed_Contract_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CCD</label>
    <type>Date</type>
</CustomField>