force-app/main/default/objects/Opportunity/fields/CCPD__c.field-meta.xml
<CustomField>
    <fullName>CCPD__c</fullName>
    <formula>Account.Closed_Contract_Paid_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>What is the Account&apos;s Closed Contract Paid Date?</inlineHelpText>
    <label>CCPD</label>
    <type>Date</type>
</CustomField>