force-app/main/default/objects/Opportunity/fields/client_ID__c.field-meta.xml
<CustomField>
    <fullName>client_ID__c</fullName>
    <description>Stakeholder: MKT</description>
    <inlineHelpText>In case the lead this opp is based on came through our online marketing: What is the lead&apos;s client ID? Set automatically on creation if available</inlineHelpText>
    <label>client ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>