force-app/main/default/objects/Opportunity/fields/Closed_Weekday__c.field-meta.xml
<CustomField>
    <fullName>Closed_Weekday__c</fullName>
    <description>Returns the day of the week when an opportunity status is set to closed</description>
    <formula>CASE(MOD(DATEVALUE(Closed_Date_Time__c )- DATE(1900,1,6), 7), 0, &quot;Saturday&quot;, 1, &quot;Sunday&quot;, 2, &quot;Monday&quot;, 3, &quot;Tuesday&quot;, 4, &quot;Wednesday&quot;, 5, &quot;Thursday&quot;, 6, &quot;Friday&quot;,&quot;&quot;)</formula>
    <label>Closed Weekday</label>
    <type>Text</type>
</CustomField>