force-app/main/default/objects/Opportunity/fields/Competitor1__c.field-meta.xml
<CustomField>
    <fullName>Competitor1__c</fullName>
    <description>Stakeholder: Sales &amp; BI</description>
    <inlineHelpText>Who are we competing against with this opp? Filled by Sales</inlineHelpText>
    <label>Competitor #1</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>*No POS</fullName>
            </value>
            <value>
                <fullName>*unknown</fullName>
            </value>
            <value>
                <fullName>9 Cookies</fullName>
            </value>
            <value>
                <fullName>Addict group</fullName>
            </value>
            <value>
                <fullName>AddiPos</fullName>
            </value>
            <value>
                <fullName>AIDA/Linecker</fullName>
            </value>
            <value>
                <fullName>Alfo PC-POS</fullName>
            </value>
            <value>
                <fullName>Amadeus</fullName>
            </value>
            <value>
                <fullName>Android POS</fullName>
            </value>
            <value>
                <fullName>Ankerdata PC-POS</fullName>
            </value>
            <value>
                <fullName>Apple computers</fullName>
            </value>
            <value>
                <fullName>APRO</fullName>
            </value>
            <value>
                <fullName>Bistro-Cash</fullName>
            </value>
            <value>
                <fullName>Bleep</fullName>
            </value>
            <value>
                <fullName>Bogan</fullName>
            </value>
            <value>
                <fullName>Bonissimo</fullName>
            </value>
            <value>
                <fullName>bonit.at</fullName>
            </value>
            <value>
                <fullName>Breadcrumb</fullName>
            </value>
            <value>
                <fullName>Carré POS (Android)</fullName>
            </value>
            <value>
                <fullName>CashIT</fullName>
            </value>
            <value>
                <fullName>CashPad</fullName>
            </value>
            <value>
                <fullName>cash register</fullName>
            </value>
            <value>
                <fullName>Cash Till Old</fullName>
            </value>
            <value>
                <fullName>Casio</fullName>
            </value>
            <value>
                <fullName>casio Android</fullName>
            </value>
            <value>
                <fullName>Casio Touchscreen</fullName>
            </value>
            <value>
                <fullName>Centegra</fullName>
            </value>
            <value>
                <fullName>Clover</fullName>
            </value>
            <value>
                <fullName>Clyo system</fullName>
            </value>
            <value>
                <fullName>Cobra POS / PC Cash</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>