force-app/main/default/objects/Opportunity/fields/Contact_from_Case__c.field-meta.xml
<CustomField>
    <fullName>Contact_from_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Stakeholder: AccM
https://jira.orderbird.com/browse/CDS-1167</description>
    <inlineHelpText>With whome has Support been in contact?</inlineHelpText>
    <label>Contact from Case</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (Contact from Case)</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>