force-app/main/default/objects/Opportunity/fields/Contact_Information__c.field-meta.xml
<CustomField>
    <fullName>Contact_Information__c</fullName>
    <formula>Account.Primary_Contact__r.Email + &apos; &amp; &apos; + Account.Name + &apos; &amp; &apos; + Account.BillingPostalCode + &apos; &amp; &apos; + Account.Primary_Contact__r.FirstName + &apos; &apos; + Account.Primary_Contact__r.LastName + &apos; &amp; &apos; +  Account.Privacy_Contact__r.Phone  + &apos; &amp; &apos; +  Account.Primary_Contact__r.MobilePhone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Information</label>
    <type>Text</type>
</CustomField>