force-app/main/default/objects/Opportunity/fields/Contract_End_date__c.field-meta.xml
<CustomField>
    <fullName>Contract_End_date__c</fullName>
    <description>https://jira.orderbird.com/browse/SFDC-1303</description>
    <label>Contract End date</label>
    <type>Date</type>
</CustomField>