force-app/main/default/objects/Opportunity/fields/Created_by_Case_Id__c.field-meta.xml
<CustomField>
    <fullName>Created_by_Case_Id__c</fullName>
    <description>https://jira.orderbird.com/browse/SAL-1277</description>
    <label>Created by Case Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>