force-app/main/default/objects/Opportunity/fields/Date_Time_Test__c.field-meta.xml
<CustomField>
    <fullName>Date_Time_Test__c</fullName>
    <description>A test by Max</description>
    <label>Date Time Test</label>
    <type>DateTime</type>
</CustomField>