force-app/main/default/objects/Opportunity/fields/DateOfHandover__c.field-meta.xml
<CustomField>
    <fullName>DateOfHandover__c</fullName>
    <description>Stakeholder: PaM &amp; Sales (CRC)</description>
    <inlineHelpText>When has a partner or existing customer send us the lead this opp is based on? Carried over from Lead</inlineHelpText>
    <label>Date of Handover</label>
    <type>Date</type>
</CustomField>