force-app/main/default/objects/Opportunity/fields/Days_without_task__c.field-meta.xml
<CustomField>
    <fullName>Days_without_task__c</fullName>
    <formula>TODAY()-Expiration_Determination_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days without Task</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>