force-app/main/default/objects/Opportunity/fields/DiscountEligible__c.field-meta.xml
<CustomField>
    <fullName>DiscountEligible__c</fullName>
    <formula>IF(
 NOT(ISNULL(ReferralContact__c )) &amp;&amp;
(TEXT( Attention_Trigger__c ) = &apos;Customer recruits Customer&apos; || TEXT(Attention_Trigger__c ) = &apos;Referral Partner&apos; || TEXT(Attention_Trigger__c ) = &apos;Tax Advisor&apos; || TEXT(Attention_Trigger__c ) = &apos;ETL&apos;)
&amp;&amp; Lead_Medium__c &lt;&gt; &apos;METRO&apos;,
&apos;Ambassador&apos;,null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Discount Eligible</label>
    <type>Text</type>
</CustomField>