force-app/main/default/objects/Opportunity/fields/DistributionPartner__c.field-meta.xml
<CustomField>
    <fullName>DistributionPartner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is a workaround until the partner community is in place and distribution partners can actually be object owners // For go-live not used, since Distribution Programm on hold // Stakeholder: PaM</description>
    <inlineHelpText>Is a distribution Partner owner of this Opportunity? Set on creation or by Leadmanagent</inlineHelpText>
    <label>Distribution Partner</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (Distribution Partner)</relationshipLabel>
    <relationshipName>OwnedOpportunities</relationshipName>
    <type>Lookup</type>
</CustomField>