force-app/main/default/objects/Opportunity/fields/DistributionPartnerAccount__c.field-meta.xml
<CustomField>
    <fullName>DistributionPartnerAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is a workaround until the partner community is in place and distribution partners can actually be object owners // For go-live not used, since Distribution Programm on hold // Stakeholders: PaM</description>
    <inlineHelpText>Is a distribution Partner owner of this Opportunity? Set on creation or by Leadmanagent // Only used as interim until lookup to Contact is implemented</inlineHelpText>
    <label>Distribution Partner Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities (as Distribution Partner)</relationshipLabel>
    <relationshipName>Opportunities_DistributionPartner</relationshipName>
    <type>Lookup</type>
</CustomField>