force-app/main/default/objects/Opportunity/fields/DLI_Date__c.field-meta.xml
<CustomField>
    <fullName>DLI_Date__c</fullName>
    <label>DevLic Increase: Date</label>
    <type>Date</type>
</CustomField>