force-app/main/default/objects/Opportunity/fields/DLI_Frequency__c.field-meta.xml
<CustomField>
    <fullName>DLI_Frequency__c</fullName>
    <label>DevLic Increase: Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Every Month</fullName>
            </value>
            <value>
                <fullName>Every Year</fullName>
            </value>
            <value>
                <fullName>Every 3 Years</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>