force-app/main/default/objects/Opportunity/fields/DLI_PriceModel__c.field-meta.xml
<CustomField>
    <fullName>DLI_PriceModel__c</fullName>
    <label>DevLic Increase: Price Model</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Model E</fullName>
            </value>
            <value>
                <fullName>Model F</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>