force-app/main/default/objects/Opportunity/fields/DLI_Quantity__c.field-meta.xml
<CustomField>
    <fullName>DLI_Quantity__c</fullName>
    <label>DevLic Increase: Quantity</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>