force-app/main/default/objects/Opportunity/fields/DoNotFlagUntil__c.field-meta.xml
<CustomField>
    <fullName>DoNotFlagUntil__c</fullName>
    <description>Required in combination with the Opp Score to temporarily remove hot opportunities from to-do lists in case there is a fixed date, until contact is unnecessary/unwanted // Stakeholder: Sales</description>
    <inlineHelpText>Is there a date before which we should NOT contact the prospect? Set by sales agent in order to exclude the opp from to-do lists until the selected date.</inlineHelpText>
    <label>Do Not Flag Until</label>
    <type>Date</type>
</CustomField>